--- a/ShoesShop/Views/ImportDataPage.xaml
+++ b/ShoesShop/Views/ImportDataPage.xaml
@@ -6,7 +6,17 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea">
-        
+    <Grid x:Name="ContentArea" Padding="20">
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="10">
+            <TextBlock Text="Import Data" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" />
+
+            <Button Content="Select File" Command="{Binding SelectFileCommand}" Width="200" />
+            <TextBlock Text="{Binding FilePath}" Width="400" TextWrapping="Wrap" />
+
+            <Button Content="Import Data" Command="{Binding ImportDataCommand}" Width="200" />
+            <TextBlock Text="{Binding StatusMessage}" Width="400" TextWrapping="Wrap" />
+
+            <ProgressRing IsActive="{Binding IsImporting}" Width="50" Height="50" />
+        </StackPanel>
     </Grid>
 </Page>
