--- a/ShoesShop/Views/ShellPage.xaml
+++ b/ShoesShop/Views/ShellPage.xaml
@@ -173,19 +173,17 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0">
-                        <Image Source="https://github.com/shadcn.png" 
-                           Width="30" 
-                           Height="30" 
-                           Margin="0,0,10,0" 
-                           VerticalAlignment="Center" />
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{x:Bind ViewModel.user.Name}"
-                                Foreground="Black" FontWeight="Bold"/>
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" >
+                        <Ellipse Width="30" Height="30" Margin="0,0,10,0" VerticalAlignment="Center">
+                            <Ellipse.Fill>
+                                <ImageBrush ImageSource="{x:Bind ViewModel.user.Image}" Stretch="UniformToFill"/>
+                            </Ellipse.Fill>
+                        </Ellipse>
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                            <TextBlock Text="{x:Bind ViewModel.user.Name}" FontWeight="Bold"/>
                             <TextBlock>-</TextBlock>
-                            <TextBlock Text="{x:Bind ViewModel.user.Role}" FontWeight="Bold"></TextBlock>
+                            <TextBlock Text="{x:Bind ViewModel.user.Role}" FontWeight="Bold"/>
                         </StackPanel>
                     </StackPanel>
                     <Button Content="Log out"
